modify database production setting

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,4 +82,6 @@ production:
   <<: *default
   database: events_app_production
   username: events_app
-  password: <%= ENV['EVENTS_APP_DATABASE_PASSWORD'] %>
+  # password: <%= ENV['EVENTS_APP_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
+  pool: <%= ENV['DATABASE_POOL_SIZE'] || 10 %>
