--- a/config/database.yml
+++ b/config/database.yml
@@ -81,7 +81,7 @@ test:
 production:
   <<: *default
   database: events_app_production
-  username: events_app
+  # username: events_app
   # password: <%= ENV['EVENTS_APP_DATABASE_PASSWORD'] %>
   url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV['DATABASE_POOL_SIZE'] || 10 %>
